[package]
name = "zerotoproduction"
version = "0.1.2"
authors = ["dabi-ngin"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zerotoproduction"

[dependencies]
unicode-segmentation = "1"
actix-web = "4"
config = "0.13"
validator = "0.16"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "chrono",
    "postgres",
    "uuid",
    "macros",
    "offline",
]}
rand = {version = "0.8", features = ["std_rng"]}

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7"
tokio = { version = "1", features = ["rt", "macros"] }
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"
